src/test/deca/context/invalid/redeclaration.deca
// Description :
// Double déclaration dans le même bloc
//
// Resultats :
// Erreur contextuelle
// double déclaration de 'x'
//

{
  int x;
  float x;
}